# rust-grpc-example

./: Makefile  README.md  kubernetes-lb.yaml  kubernetes.yaml
rust/: .gitignore  Makefile  books.proto  docker-compose.yaml  kubernetes.yaml
rust/app/: Cargo.toml
rust/app/src/: client.rs  server.rs
rust/dockers/cli/: Dockerfile
rust/dockers/grpc-server/: Dockerfile
rust/dockers/server/: Dockerfile
rust/protoc-rust/: Dockerfile
rust/server/: Cargo.toml
rust/server/src/: main.rs
rust/src/: Cargo.toml
rust/src/app/: Cargo.toml
rust/src/app/src/: client.rs
rust/src/cli/: Cargo.toml
rust/src/cli/src/: cli.rs  commands.rs  main.rs
rust/src/db/: Cargo.toml
rust/src/db/src/: lib.rs  models.rs  schema.rs
rust/src/server/: Cargo.toml
rust/src/server/src/: main.rs
src/cli/: Cargo.toml
src/cli/src/: cli.rs  commands.rs  main.rs
src/db/migrations/2019-08-02-174400_create_books/: up.sql
src/db/src/: lib.rs  models.rs
src/server/: Cargo.toml
src/server/src/: main.rs
