[package]
name = "app"
version = "0.1.0"
authors = ["Oleg Gashev <oleg@gashev.net>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1"
grpcio = "0.4"
protobuf = { version = "2", features = ["with-bytes"] }
db = { path = "../db" }